--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <div class="front flap"></div>
                 <div class="front pocket"></div>
                 <div class="letter">
-                    <p class="words line1">Haii idaaa,</p>
+                    <p class="words line1">Haii Aditt,</p>
                     <p class="words line2">happy valentine, i always love youu </p>
                     <p class="words line3">Dari,</p>
                     <p class="words line4">Aditt</p>
